--- a/helm/ukur-demo/templates/configmap.yaml
+++ b/helm/ukur-demo/templates/configmap.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 data:
   application.properties: |+
-    ukur.subscription.url=http://ukur.default/external/subscription
-    push.baseurl=http://ukur-demo.dev/push
+    ukur.subscription.url=http://ukur/external/subscription
+    push.baseurl=http://ukur-demo/push
 kind: ConfigMap
 metadata:
   name: {{ .Release.Name }}
