--- a/helm/ukur-demo/templates/deployment.yaml
+++ b/helm/ukur-demo/templates/deployment.yaml
@@ -27,8 +27,8 @@ spec:
         - name: JAVA_OPTIONS
           value: -server -Dspring.config.additional-location=/etc/application-config/application.properties
             -Xmx{{ .Values.resources.xmx }} -Dserver.port={{ .Values.service.internalPort }} -Dfile.encoding=UTF-8 -Drutebanken.kubernetes.namespace={{ .Release.Namespace }}
-        image: {{ .Values.image }}:{{ .Values.imageTag }}
-        imagePullPolicy: {{ .Values.imagePullPolicy }}
+        image: {{ .Values.image.identifier }}
+        imagePullPolicy: {{ .Values.image.imagePullPolicy }}
         livenessProbe:
           failureThreshold: 3
           httpGet:
