--- a/helm/ukur-demo/templates/ingress.yaml
+++ b/helm/ukur-demo/templates/ingress.yaml
@@ -4,11 +4,11 @@ metadata:
   labels:
     {{- include "common.labels" . | indent 4 }}
   annotations:
-    {{- if eq .Release.Namespace "dev" }}
+    {{- if eq eq .Values.env "dev" }}
     external-dns.alpha.kubernetes.io/target: {{ .Values.externalDns.ingressLoadBalancerIP.dev }}
-    {{- else if eq .Release.Namespace "staging" }}
+    {{- else if eq .Values.env "staging" }}
     external-dns.alpha.kubernetes.io/target: {{ .Values.externalDns.ingressLoadBalancerIP.staging }}
-    {{- else if eq .Release.Namespace "production" }}
+    {{- else if .Values.env "production" }}
     external-dns.alpha.kubernetes.io/target: {{ .Values.externalDns.ingressLoadBalancerIP.production }}
     {{- end }}
     kubernetes.io/ingress.class: traefik
@@ -16,11 +16,11 @@ metadata:
   namespace: {{ .Release.Namespace }}
 spec:
   rules:
-    {{- if eq .Release.Namespace "dev" }}
+    {{- if eq eq .Values.env "dev" }}
     - host: {{ .Values.app }}-{{ .Values.api }}-{{ .Release.Namespace }}.dev.entur.io
-    {{- else if eq .Release.Namespace "staging" }}
+    {{- else if eq .Values.env "staging" }}
     - host: {{ .Values.app }}-{{ .Values.api }}-{{ .Release.Namespace }}.staging.entur.io
-    {{- else if eq .Release.Namespace "production" }}
+    {{- else if eq .Values.env "production" }}
     - host: {{ .Values.app }}-{{ .Values.api }}-{{ .Release.Namespace }}.entur.io
     {{- end }}
       http:
@@ -28,3 +28,13 @@ spec:
         - backend:
             serviceName: {{ .Release.Name }}
             servicePort: {{ .Values.service.externalPort }}
+
+
+
+            {{- if eq .Values.env "production"}}
+            external-dns.alpha.kubernetes.io/target: {{ .Values.ingress.productionIp }}
+            {{ else if eq .Values.env "staging"}}
+            external-dns.alpha.kubernetes.io/target: {{ .Values.ingress.stagingIp }}
+            {{ else if eq .Values.env "dev"}}
+            external-dns.alpha.kubernetes.io/target: {{ .Values.ingress.devIp }}
+            {{- end}}
