--- a/helm/ukur-demo/values.yaml
+++ b/helm/ukur-demo/values.yaml
@@ -1,31 +1,27 @@
-minReplicas: 1
-maxReplicas: 1
+env: dev
+
+replicas: 1
+
+
+rollingUpdate:
+  maxSurge: 1
+  maxUnavailable: 1
 image:
   identifier: ${artifact.metadata.image}
   imagePullPolicy: Always
-imagePullPolicy: Always
-slack: talk-ror
-team: ror
-type: backend
-app: ukur-demo
-api: realtime-deviations-demo-v1
-service:
-  name: ukur-demo
-  type: ClusterIP
-  externalPort: 80
-  internalPort: 8080
-  internalJolokiaPort: 8778
-  debugPort: 5005
 resources:
-  cpuLimit: "2"
-  memLimit: 2048Mi
-  cpuRequest: 200m
-  memRequest: 512Mi
-  xmx: 1024m
+  cpuLimit: 2
+  memLimit: 2000Mi
+  cpuRequest: 500m
+  memRequest: 500Mi
+  xmx: 1000m
 
+service:
+  http:
+    externalPort: 80
+    internalPort: 8080
 ingress:
   enabled: true
   devIp: 35.195.223.29
   stagingIp: 35.195.146.93
   productionIp: 35.187.15.14
-
