--- a/helm/ukur-demo/templates/deployment.yaml
+++ b/helm/ukur-demo/templates/deployment.yaml
@@ -1,16 +1,16 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
+  name: {{ template "ukur-demo.name" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "common.labels" . | indent 4 }}
-  name: {{ .Release.Name }}
-  namespace: {{ .Release.Namespace }}
 spec:
-  replicas: {{ .Values.minReplicas }}
-  revisionHistoryLimit: 2
+  progressDeadlineSeconds: 600
+  replicas: {{ .Values.replicas }}
   selector:
     matchLabels:
-      {{- include "common.labels" . | indent 8 }}
+      app: {{ template "ukur-demo.name" . }}
   strategy:
     type: Recreate
   template:
@@ -19,58 +19,62 @@ spec:
         {{- include "common.labels" . | indent 8 }}
     spec:
       containers:
-      - command:
-        - /deployments/run-java.sh
-        env:
-        - name: TZ
-          value: Europe/Oslo
-        - name: JAVA_OPTIONS
-          value: -server -Dspring.config.additional-location=/etc/application-config/application.properties
-            -Xmx{{ .Values.resources.xmx }} -Dserver.port={{ .Values.service.internalPort }} -Dfile.encoding=UTF-8 -Drutebanken.kubernetes.namespace={{ .Release.Namespace }}
-        image: {{ .Values.image.identifier }}
-        imagePullPolicy: {{ .Values.image.imagePullPolicy }}
-        livenessProbe:
-          failureThreshold: 3
-          httpGet:
-            path: health/live
-            port: {{ .Values.service.internalPort }}
-            scheme: HTTP
-          initialDelaySeconds: 60
-          periodSeconds: 10
-          successThreshold: 1
-          timeoutSeconds: 20
-        name: {{ .Chart.Name }}
-        ports:
-        - containerPort: {{ .Values.service.internalPort }}
-          name: http
-          protocol: TCP
-        - containerPort: {{ .Values.service.internalJolokiaPort}}
-          name: jolokia
-          protocol: TCP
-        readinessProbe:
-          failureThreshold: 3
-          httpGet:
-            path: health/ready
-            port: {{ .Values.service.internalPort }}
-            scheme: HTTP
-          initialDelaySeconds: 30
-          periodSeconds: 10
-          successThreshold: 1
-          timeoutSeconds: 20
-        resources:
-          limits:
-            cpu: {{ .Values.resources.cpuLimit }}
-            memory: {{ .Values.resources.memLimit }}
-          requests:
-            cpu: {{ .Values.resources.cpuRequest }}
-            memory: {{ .Values.resources.memRequest }}
-        volumeMounts:
-        - mountPath: /etc/application-config
-          name: {{ .Values.app }}
-          readOnly: true
+        - env:
+            - name: JAVA_OPTIONS
+              value: -server -Xmx{{ .Values.resources.xmx }} -Dspring.config.location=/etc/application-config/application.properties
+                -Dfile.encoding=UTF-8
+            - name: TZ
+              value: Europe/Oslo
+          image: {{ .Values.image.identifier }}
+          imagePullPolicy: {{ .Values.image.imagePullPolicy }}
+          livenessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: health/live
+              port: {{ .Values.service.http.internalPort }}
+              scheme: HTTP
+            initialDelaySeconds: 60
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 20
+          name: ukur-demo
+          ports:
+            - containerPort: {{ .Values.service.http.internalPort }}
+              name: http
+              protocol: TCP
+            - containerPort: 8778
+              name: jolokia
+              protocol: TCP
+          readinessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: health/ready
+              port: {{ .Values.service.http.internalPort }}
+              scheme: HTTP
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 20
+          resources:
+            limits:
+              cpu: {{ .Values.resources.cpuLimit }}
+              memory: {{ .Values.resources.memLimit }}
+            requests:
+              cpu: {{ .Values.resources.cpuRequest }}
+              memory: {{ .Values.resources.memRequest }}
+          terminationMessagePath: /dev/termination-log
+          terminationMessagePolicy: File
+          volumeMounts:
+            - mountPath: /etc/application-config
+              name: application-config
+              readOnly: true
+      dnsPolicy: ClusterFirst
       restartPolicy: Always
+      schedulerName: default-scheduler
+      securityContext: {}
+      terminationGracePeriodSeconds: 30
       volumes:
-      - configMap:
-          defaultMode: 420
-          name: {{ .Values.app }}
-        name: {{ .Values.app }}
+        - configMap:
+            defaultMode: 420
+            name: ukur-demo-config
+          name: application-config
