--- a/helm/ukur-demo/templates/service.yaml
+++ b/helm/ukur-demo/templates/service.yaml
@@ -1,22 +1,17 @@
-apiVersion: v1
+apiVersion: extensions/v1beta1
 kind: Service
 metadata:
   labels:
     {{- include "common.labels" . | indent 4 }}
-  name: {{ .Release.Name }}
+  name: {{ template "ukur-demo.name" . }}
   namespace: {{ .Release.Namespace }}
 spec:
   ports:
-  - name: http
-    port: {{ .Values.service.externalPort }}
-    protocol: TCP
-    targetPort: {{ .Values.service.internalPort }}
-  - name: debug
-    port: {{ .Values.service.debugPort }}
-    protocol: TCP
-    targetPort: {{ .Values.service.debugPort }}
+    - name: http
+      port: {{ .Values.service.http.externalPort }}
+      protocol: TCP
+      targetPort: {{ .Values.service.http.internalPort }}
   selector:
-    app: {{ .Release.Name }}
-    version: {{ .Chart.Version }}
+    app: {{ template "ukur-demo.name" . }}
   sessionAffinity: None
   type: ClusterIP
