--- a/helm/ukur-demo/templates/configmap.yaml
+++ b/helm/ukur-demo/templates/configmap.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: v1
 data:
   application.properties: |+
     ukur.subscription.url=http://ukur/external/subscription
@@ -6,5 +6,7 @@ data:
     server.port=8090
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}
+  name: {{ template "ukur-demo.name" . }}-config
   namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "common.labels" . | indent 4 }}
