--- a/helm/ukur-demo/templates/deployment.yaml
+++ b/helm/ukur-demo/templates/deployment.yaml
@@ -69,6 +69,8 @@ spec:
               name: application-config
               readOnly: true
       dnsPolicy: ClusterFirst
+      imagePullSecrets:
+        - name: rutebanken-registry-key
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
