Update Helm configuration: update api version to v1 in ingress.yaml

--- a/helm/ukur-demo/templates/ingress.yaml
+++ b/helm/ukur-demo/templates/ingress.yaml
@@ -18,5 +18,6 @@ spec:
             backend:
               service:
                 name: {{ template "ukur-demo.name" . }}
-                port: {{ .Values.service.http.externalPort }}
+                port:
+                  number: {{ .Values.service.http.externalPort }}
   {{- end }}
