Update Helm configuration: update deployment.yaml for gcp2.0 migration

--- a/helm/ukur-demo/templates/deployment.yaml
+++ b/helm/ukur-demo/templates/deployment.yaml
@@ -78,7 +78,10 @@ spec:
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
-      securityContext: {}
+      securityContext:
+        runAsGroup: 1000
+        runAsNonRoot: true
+        runAsUser: 1000
       terminationGracePeriodSeconds: 30
       volumes:
         - configMap:
