Update Helm configuration: update configmap.yaml adds internal ingress

--- a/helm/ukur-demo/environments/values-dev.yaml
+++ b/helm/ukur-demo/environments/values-dev.yaml
@@ -2,3 +2,7 @@ ingress:
   enabled: true
   domainName: .dev.entur.io
 
+configMap:
+  ukurUrl: http://ukur.dev.entur.internal/external/subscription
+  ukurDemoUrl: http://ukur-demo.dev.entur.internal/push
+
