--- a/helm/ukur-demo/environments/values-prod.yaml
+++ b/helm/ukur-demo/environments/values-prod.yaml
@@ -1,3 +1,7 @@
 ingress:
   enabled: true
   domainName: .entur.io
+
+configMap:
+  ukurUrl: http://ukur.prd.entur.internal/external/subscription
+  ukurDemoUrl: http://ukur-demo.prd.entur.internal/push
