--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ aliases:
 jobs:
   build:
     docker:
-      - image: eu.gcr.io/entur-system-1287/circleci-toolbox-image-java11
+      - image: cimg/openjdk:17.0.1
         auth:
           username: _json_key
           password: $DOCKER_PASSWORD
@@ -84,7 +84,7 @@ jobs:
             - ./version
   deploy-docker:
     docker:
-      - image: eu.gcr.io/entur-system-1287/circleci-toolbox-image-java11
+      - image: cimg/openjdk:17.0.1
         auth:
           username: _json_key
           password: $DOCKER_PASSWORD
