--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,11 @@
 version: 2
 aliases:
-  - &jfrog-login
-    name: Rename jfrog environment variable for maven setting.xml
-    command: |
-      echo "export JFROG_USER=$ARTIFACTORY_USER"  >> $BASH_ENV
-      echo "export JFROG_PASS=$ARTIFACTORY_PASSWORD"  >> $BASH_ENV
-
-  - &GCP-auth
-    name: GCP Authenticate
-    command: |
-      echo 'export GCLOUD_SERVICE_KEY="$GCLOUD_SERVICE_KEY"' >> $BASH_ENV
-      /tools/gcp_authenticate.sh
-  - &docker-login
-    name: Docker login
-    command: |
-      docker login -u _json_key --password-stdin https://eu.gcr.io <<< "${DOCKER_PASSWORD}"
+  - &google-sdk-container-config
+    docker:
+      - image: google/cloud-sdk:alpine
+        auth:
+          username: $DOCKERHUB_LOGIN
+          password: $DOCKERHUB_PASSWORD
   - &tag-git-version
     name: Tag git commit with build version and push to github
     command: |
@@ -22,6 +13,10 @@ aliases:
       git config --global user.name "circleci"
       git tag $VERSION
       git push origin $VERSION
+  - &jfrog-settings
+    name: Write artifactory settings to file
+    command: |
+      echo "$ARTIFACTORY_SETTINGS" | base64 --decode > .circleci/settings.xml
   - &create-image-version
     name: Create new image version and store to env var and as file in workspace
     command: |
@@ -38,29 +33,27 @@ aliases:
       echo "Image: ${IMAGE}"
       docker build -t $IMAGE .
       docker tag $IMAGE "${IMAGE}":"${VERSION}"
-      docker push $IMAGE
+      docker login -u _json_key --password-stdin https://eu.gcr.io <<< "${DOCKER_PASSWORD}"
+      docker push "${IMAGE}":"${VERSION}"
 
 jobs:
   build:
     docker:
       - image: cimg/openjdk:17.0.1
-        auth:
-          username: _json_key
-          password: $DOCKER_PASSWORD
     environment:
       MAVEN_OPTS: -Xmx3G
     steps:
       - checkout
       - restore_cache:
           key: dep-cache-{{ checksum "pom.xml" }}
-      - run: *jfrog-login
-      - run: mvn org.apache.maven.plugins:maven-dependency-plugin:3.1.0:go-offline -s /tools/m2/settings.xml
+      - run: *jfrog-settings
+      - run: mvn org.apache.maven.plugins:maven-dependency-plugin:3.1.0:go-offline -s .circleci/settings.xml
       - save_cache:
           paths:
             - ~/.m2
           key: dep-cache-{{ checksum "pom.xml" }}
       # Cannot use -o because of snapshot dependencies.
-      - run: mvn install -s /tools/m2/settings.xml
+      - run: mvn verify -s .circleci/settings.xml
       - run:
           name: Save test results
           command: |
@@ -83,20 +76,12 @@ jobs:
             - .circleci
             - ./version
   deploy-docker:
-    docker:
-      - image: cimg/openjdk:17.0.1
-        auth:
-          username: _json_key
-          password: $DOCKER_PASSWORD
-    environment:
-      DEBIAN_FRONTEND: "noninteractive"
+    <<: *google-sdk-container-config
     steps:
+      - setup_remote_docker:
+          version: 20.10.14
       - attach_workspace:
           at: ~/project
-      - setup_remote_docker:
-          docker_layer_caching: true
-      - run: *GCP-auth
-      - run: *docker-login
       - run: *read-image-version
       - run: *docker-build-and-push
 workflows:
