--- a/helm/ukur-demo/values.yaml
+++ b/helm/ukur-demo/values.yaml
@@ -5,7 +5,7 @@ rollingUpdate:
   maxSurge: 1
   maxUnavailable: 1
 image:
-  identifier: ${artifact.metadata.image}
+  identifier: <+artifacts.primary.image>
   imagePullPolicy: Always
 resources:
   cpuLimit: 2
